DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2005-11-12 patrickh vpr::Library and vpr::LibraryLoader functions now throw
                    exceptions instead of returning vpr::ReturnStatus.
                    NEW VERSION: 1.1.10
2005-10-28 allenb   Fixed up bugs in BSD Socket related to async connection,
                    isConnected, and exceptions thrown.
                    NEW VERSION: 1.1.9
2005-08-25 patrickh Added execption throwing to vpr::ObjectReader,
                    vpr::ObjectWriter, and types derived therefrom.
                    NEW VERSION: 1.1.8
2005-08-24 patrickh Added throw() clause to vpr::ReadableObject::readObject(),
                    to vpr::WriteableObject::writeObject(), and to the
                    destructor for each of those classes.
                    NEW VERSION: 1.1.7
2005-08-22 patrickh Added exception handling to Windows/NSPR I/O code.
                    NEW VERSION: 1.1.6
2005-08-18 aronb    Added exception handling to POSIX/BSD I/O code.
                    NEW VERSION: 1.1.5
2005-07-11 patrickh Removed methods from vpr::LibraryLoader that were marked as
                    deprecated in version 0.92.3.  Removed vpr::RefCountMemory,
                    which was marked as deprecaetd in version 0.92.0.
                    NEW VERSION: 1.1.4
2005-07-11 patrickh Eliminated the need for users of vprSingletonHeader* to
                    declare vpr::detail::Deleter<T> as a friend.
                    NEW VERSION: 1.1.3
2005-07-10 patrickh Extended the vprSingleton* macros so that singleton objects
                    are deleted on application exit and so that singletons have
                    longevity.
                    NEW VERSION: 1.1.2
2005-06-09 patrickh Updated to support Windows 64-bit edition.
                    NEW VERSION: 1.1.1
2005-06-06 patrickh VR Juggler 2.0 branch created.
                    NEW VERSION: 1.1.0
