@@ -1,3 +1,4 @@
+1.1.11-0 @12/09/2005 15:50:00 UTC@
 1.1.10-0 @11/12/2005 14:55:00 UTC@
 1.1.9-0 @10/28/2005 22:00:00 UTC@
 1.1.8-0 @08/25/2005 21:45:00 UTC@
